--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prettify": "yarn prettier --write ."
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.0.5",
@@ -24,6 +25,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "husky": "^7.0.4",
+    "prettier": "2.5.1",
     "typescript": "4.3.2"
   }
 }
