--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^17.0.3",
     "husky": "^7.0.4",
     "prettier": "2.5.1",
+    "pretty-quick": "^3.1.3",
     "typescript": "4.3.2"
   }
 }
